# sqlite-vector-graph

./: .clang-format  .clang-format-ignore  .gitignore  CHANGELOG.md  Makefile  README.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: Makefile
benchmarks/charts/: dataset_comparison_BGE-Large.json  dataset_comparison_MPNet.json  dataset_comparison_MiniLM.json  dataset_comparison_NomicEmbed.json  db_size_models_ag_news.json  db_size_models_wealth_of_nations.json  embed_insert_ag_news.json  embed_insert_wealth_of_nations.json  embed_only_ag_news.json  embed_only_wealth_of_nations.json  embed_ql_MiniLM_ag_news.json  embed_ql_MiniLM_wealth_of_nations.json  embed_ql_NomicEmbed_ag_news.json  embed_ql_NomicEmbed_wealth_of_nations.json  embed_recall_ag_news.json  embed_recall_wealth_of_nations.json  embed_xmodel_ag_news.json  embed_xmodel_wealth_of_nations.json  graph_query_time_betweenness.json  graph_query_time_bfs.json  graph_setup_time.json  (+29 more)
docs/: benchmarks.md  centrality-community.md  getting-started.md  graphrag-cookbook.md  index.md  node2vec.md
npm/: biome.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
pytests/: conftest.py  test_embed_gguf.py  test_graph_adjacency.py  test_graph_centrality.py  test_graph_community.py  test_graph_tvf.py  test_hnsw_vtab.py  test_install.py  test_node2vec.py
scripts/: amalgamate.sh  build_windows.bat  explore_logo.py  exportenv.py  process_logo.py  validate_skill_examples.py  version_stamp.py
sqlite_muninn/: __init__.py
src/: embed_gguf.c  embed_gguf.h  graph_adjacency.c  graph_adjacency.h  graph_centrality.c  graph_common.h  graph_community.c  graph_csr.c  graph_csr.h  graph_load.c  graph_load.h  graph_tvf.c  hnsw_algo.c  hnsw_algo.h  hnsw_vtab.c  id_validate.c  muninn.c  muninn.h  node2vec.c  priority_queue.c  vec_math.c  vec_math.h
test/: test_common.h  test_embed_gguf.c  test_graph_csr.c  test_hnsw_algo.c  test_id_validate.c  test_main.c  test_priority_queue.c
viz/: .gitignore  Makefile  pyproject.toml
viz/frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
viz/frontend/e2e/: graph.spec.ts  kg-pipeline.spec.ts  vss.spec.ts
viz/frontend/e2e/helpers/: checkpoint.ts
viz/frontend/src/: App.tsx
viz/frontend/src/components/: AppSidebar.tsx  EmbeddingCanvas.tsx  EmbeddingsMiniViz.tsx  EntityStageView.tsx  GraphCanvas.tsx  GraphControls.tsx  GraphExplorer.tsx  GraphMiniViz.tsx  InfiniteList.tsx  KGPipelineExplorer.tsx  KGStagePills.tsx  Layout.tsx  Node2VecStageView.tsx  PaginatedList.tsx  RelationStageView.tsx  ThemeProvider.tsx  VSSExplorer.tsx
viz/frontend/src/components/ui/: tabs.tsx
viz/frontend/src/hooks/: useDeepLink.ts  useGraphData.ts  useKGPipeline.ts  useVSSData.ts
viz/frontend/src/lib/: constants.ts  fcose.ts  types.ts
viz/frontend/src/lib/__tests__/: api-client.test.ts  app-store.test.ts  cytoscape.test.ts  deckgl.test.ts  deep-link.test.ts  fcose.test.ts  graph-service.test.ts  kg-pipeline.test.ts  kg-service.test.ts  vss-service.test.ts
viz/frontend/src/lib/services/: api-client.ts  graph-service.ts  kg-service.ts  vss-service.ts
viz/frontend/src/lib/transforms/: cytoscape.ts  deckgl.ts  kg-pipeline.ts
viz/frontend/src/pages/: EmbeddingsIndexPage.tsx  EmbeddingsPage.tsx  GraphIndexPage.tsx  GraphPage.tsx  KGOverviewPage.tsx  KGQueryPage.tsx  KGStagePage.tsx
viz/frontend/src/stores/: app-store.ts
viz/server/: __main__.py  config.py  main.py
viz/server/routes/: graph.py  health.py  kg.py  vss.py
viz/server/services/: db.py  embeddings.py  kg.py  validation.py
viz/tests/: conftest.py  test_main.py  test_routes_graph.py  test_routes_health.py  test_routes_kg.py  test_routes_vss.py  test_services_db.py  test_services_embed.py  test_services_kg.py  test_services_validation.py
wasm/: .gitignore  Makefile  index.html  package.json  playwright.config.ts  script.js  styles.css
(+90 files in other folders)
