[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-muninn"
dynamic = ["version"]
description = "HNSW vector search + graph traversal + GGUF embeddings + Node2Vec for SQLite"
requires-python = ">=3.12,<3.14"
license = "MIT"
readme = "README.md"
keywords = ["sqlite", "vector", "hnsw", "graph", "node2vec", "search", "gguf", "embeddings", "llama.cpp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/user/sqlite-muninn"
Repository = "https://github.com/user/sqlite-muninn"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["sqlite_muninn*"]

[tool.setuptools.package-data]
sqlite_muninn = ["*.so", "*.dylib", "*.dll"]

# Development dependency groups (not package dependencies)
[dependency-groups]
benchmark = [
    "numpy>=2.0",
    "numba>=0.60",
    "umap-learn>=0.5.7",
    "plotly>=6.5.2",
    "jinja2>=3.1.0",
    
    # Competitors / peers depending how you look at it
    "apsw",
    "sqliteai-vector>=0.9.70",
    "vectorlite-py",
    "sqlite-vec",
    "graphqlite",
    
    # Models and Benchmarking Datasets
    "datasets>=4.5.0",
    "sentence-transformers>=5.2.2",
    "gliner",
    "spacy",
    "textacy",
    "recordlinkage",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-plotly-plugin>=0.1.3",
    "networkx",
    # Dependencies for the examples/
    "sqlite-lembed",
    "sqlite-rembed"
]
dev = [
    "gcovr>=8.6",
    "git-cliff>=2.12.0",
    "mypy>=1.19.1",
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["pytests"]
addopts = "--cov=sqlite_muninn --cov=pytests --cov-report=term-missing --cov-fail-under=90 -m 'not integration'"
markers = [
    "integration: slow install tests that create throwaway projects (deselected by default)",
    "gguf: tests requiring GGUF model files (auto-downloaded on first run)",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["vendor/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
