[project]
name = "muninn-viz"
version = "0.1.0"
description = "Interactive visualization tool for muninn SQLite extension"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "umap-learn>=0.5.7",
    "numba>=0.60",
    "numpy>=2.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=server --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = ["server/__main__.py"]
